# clib2

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: format.yml
examples/crypto/: crc32.c  rng.c
examples/types/: arena.c  option.c  queue.c  result.c  stack.c  vector.c
examples/utils/io/: logger.c
examples/utils/str/: compatibility.c  extra.c  strbuilder.c
extra/docs/: disclaimers.dox  mainpage.dox
include/: shared.h
include/crypto/: crc32.h  rng.h
include/types/: arena.h  option.h  queue.h  result.h  stack.h  vector.h
include/utils/io/: logger.h
include/utils/str/: compatibility.h  extra.h  strbuilder.h
src/crypto/: crc32.c  rng.c
src/types/: arena.c  option.c  queue.c  result.c  stack.c  vector.c
src/utils/io/: logger.c
src/utils/str/: compatibility.c  extra.c  strbuilder.c
test/: arena.test
test/crypto/: crc32.c  rng.c
test/types/: arena.c  option.c  queue.c  result.c  stack.c  vector.c
test/utils/io/: logger.c
test/utils/str/: compatibility.c  extra.c  strbuilder.c
